--- a/apps/web/src/components/BaseHead.astro
+++ b/apps/web/src/components/BaseHead.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import { SEO } from "astro-seo";
+import { Font } from 'astro:assets';
 
 interface Props {
   title: string;
@@ -8,6 +9,8 @@ interface Props {
 const { title } = Astro.props;
 ---
 <meta charset="UTF-8" />
+<Font cssVariable="--font-lora" preload />
+<Font cssVariable="--font-source" preload />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.ico`} sizes="any" />
 <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.svg`} type="image/svg+xml" />
