--- a/apps/web/src/components/BaseHead.astro
+++ b/apps/web/src/components/BaseHead.astro
@@ -1,29 +1,30 @@
 ---
-import "../styles/global.css";
-import { SEO } from "astro-seo";
-import { Font } from 'astro:assets';
+import '../styles/global.css'
+import { SEO } from 'astro-seo'
+import { Font } from 'astro:assets'
 
 interface Props {
-  title: string;
+	title: string
 }
-const { title } = Astro.props;
+const { title } = Astro.props
 ---
+
 <meta charset="UTF-8" />
 <Font cssVariable="--font-lora" preload />
-<Font cssVariable="--font-source" preload />
+<Font cssVariable="--font-fira" preload />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.ico`} sizes="any" />
 <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.svg`} type="image/svg+xml" />
 <meta name="generator" content={Astro.generator} />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <SEO
-      title={title}
-      description="Récit d’une époque ou d’un événement marquant de votre vie, récit de voyage...Nathalie Cheffreville tisse vos mots pour en faire une histoire."
-      openGraph={{
-        basic: {
-          title: title,
-          type: "Écrivaine biographe",
-          image: "https://lesmotsenfilature.fr/favicon.svg",
-        }
-      }}
-    />
+	title={title}
+	description="Récit d’une époque ou d’un événement marquant de votre vie, récit de voyage...Nathalie Cheffreville tisse vos mots pour en faire une histoire."
+	openGraph={{
+		basic: {
+			title: title,
+			type: 'Écrivaine biographe',
+			image: 'https://lesmotsenfilature.fr/favicon.svg'
+		}
+	}}
+/>
