--- a/apps/web/src/layouts/Layout.astro
+++ b/apps/web/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props
   <body class="min-h-screen relative">
 
     <Navigation/>
-    <main class="font-funnel">
+    <main>
       
       <slot/>
     </main>
