--- a/apps/web/src/components/Hero.astro
+++ b/apps/web/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import Background from '../assets/landing.jpg'
 import { getImage } from 'astro:assets'
-import { ChevronDown, BookImage } from '@lucide/astro'
+import ChevronDown from '@lucide/astro/icons/chevron-down'
 
 const betterBackground = await getImage({ src: Background, format: 'webp' })
 ---
